# AI_CHAT_DESK

./: .gitignore  AI_RAG.code-workspace  API_INTEGRATION_SUMMARY.md  PROJECT_SETUP.md  README.md  README_EN.md  RESET_TO_DEMO_MODE.md  TROUBLESHOOTING_401.md  reset_to_demo.html  start.bat  start.ps1  test_api.py
backend/: .env.development  .env.example  .env.template  pyproject.toml  pyrightconfig.json
backend/src/: __init__.py  main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: main.js  preload.js
frontend/src/: App.vue  vue-shims.d.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: settings.ts
frontend/src/views/: ChatView.vue  SettingsView.vue  TestView.vue
